--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,6 @@
   "description": "This is a bookstore developed with VanillaJS by MVC-Pattern and some TDD for the models (using jest)",
   "main": "app.js",
   "scripts": {
-    "test": "node ./staticServer.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +18,5 @@
     "mocha"
   ],
   "author": "Konstantin Oliver Paul, Alexander Stretz, Michael Manfred Batz, Theresa Schaller",
-  "license": "CC-BY-3.0-DE",
-  "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.1.3",
-    "sinon": "^12.0.1"
-  }
+  "license": "CC-BY-3.0-DE"
 }
